--- a/templates/responsive.html
+++ b/templates/responsive.html
@@ -18,6 +18,14 @@
     border: 3px solid white;
   
 }
+.lost{
+  font-size:35px;
+    font-color: #800000 ;
+    position: relative;
+
+  text-align: center;
+  text-transform: capitalize;
+}
 .blinking{
     font-size:35px;
     font-color: #691E9E;
@@ -25,14 +33,14 @@
 
   text-align: center;
   text-transform: capitalize;
-	animation:blinkingText 2s infinite;
+  animation:blinkingText 2s infinite;
 }
 @keyframes blinkingText{
-	0%{		color: #691E9E;	}
-	49%{	color: #691E9E;	}
-	50%{	color: transparent;	}
-	99%{	color:transparent;	}
-	100%{	color: #000;	}
+  0%{   color: #691E9E; }
+  49%{  color: #691E9E; }
+  50%{  color: transparent; }
+  99%{  color:transparent;  }
+  100%{ color: #000;  }
 }
 
 
@@ -55,6 +63,7 @@
     {%  for item in dome1 %}
         <p class="blinking"> {{ item }}</p>
     {%  endfor %}
+  
   </div>
 
   <div class="col" style="background:#a3d2e3">
@@ -62,19 +71,22 @@
     {%  for item in dome2 %}
         <p class="blinking"> {{ item }} </p>
     {%  endfor %}
+    
   </div>
 
   <div class="col" style="background:#a3d2e3">
-    <h1 style="color:#2D5779">Dome3</h1>
+    <h1 style="color:#2D5779">Library</h1>
     {%  for item in dome3 %}
         <p class="blinking"> {{ item }}</p>
     {%  endfor %}
+   
   </div>
   <div class="col" style="background:#a3d2e3">
-    <h1 style="color:#2D5779">Dome4</h1>
+    <h1 style="color:#2D5779">Cafetaria</h1>
     {%  for item in dome4 %}
         <p class="blinking"> {{ item }}</p>
     {%  endfor %}
+    
   </div>
 </div>
 
